--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -120,4 +120,7 @@
 {% endif %}
     </ul>
   </div>
+  
+  <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=Pmt0C9K_C_S29BqJZsQVFwqFr6nDvmzfsWOMxpqSe1I'></script>
+
 </div>
