--- a/_includes/author-profile.html
+++ b/_includes/author-profile.html
@@ -121,6 +121,7 @@
     </ul>
   </div>
   
-  <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=n&d=Pmt0C9K_C_S29BqJZsQVFwqFr6nDvmzfsWOMxpqSe1I'></script>
+  <br>
+  <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=Pmt0C9K_C_S29BqJZsQVFwqFr6nDvmzfsWOMxpqSe1I'></script>
 
 </div>
