--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,8 @@ layout: compress
     {% include masthead.html %}
 
     {{ content }}
+    
+    <script type='text/javascript' id='clustrmaps' src='//cdn.clustrmaps.com/map_v2.js?cl=ffffff&w=a&t=tt&d=Pmt0C9K_C_S29BqJZsQVFwqFr6nDvmzfsWOMxpqSe1I'></script>
 
     <div class="page__footer">
       <footer>
